@@ -426,197 +426,6 @@ int wpa_snprintf_hex_uppercase(char *buf, size_t buf_size, const u8 *data,
 
 
 #ifdef CONFIG_ANSI_C_EXTRA
-/*
- * Extremely simple (and likely inefficient) example implementation of some C
- * library functions
- */
-
-#if !defined(_MSC_VER) || _MSC_VER < 1400
-#ifndef _MSC_VER
-#undef memcpy
-void *memcpy(void *dest, const void *src, size_t n)
-{
-	unsigned char *d = dest;
-	const unsigned char *s = src;
-	while (n--)
-		*d++ = *s++;
-	return dest;
-}
-#endif
-
-
-#undef memmove
-void *memmove(void *dest, const void *src, size_t n)
-{
-	if (dest < src)
-		memcpy(dest, src, n);
-	else {
-		/* overlapping areas */
-		unsigned char *d = (unsigned char *) dest + n;
-		const unsigned char *s = (const unsigned char *) src + n;
-		while (n--)
-			*--d = *--s;
-	}
-	return dest;
-}
-
-
-#ifndef _MSC_VER
-#undef memset
-void *memset(void *s, int c, size_t n)
-{
-	unsigned char *p = s;
-	while (n--)
-		*p++ = c;
-	return s;
-}
-#endif
-
-
-#ifndef _MSC_VER
-#undef memcmp
-int memcmp(const void *s1, const void *s2, size_t n)
-{
-	const unsigned char *p1 = s1, *p2 = s2;
-
-	if (n == 0)
-		return 0;
-
-	while (*p1 == *p2) {
-		p1++;
-		p2++;
-		n--;
-		if (n == 0)
-			return 0;
-	}
-
-	return *p1 - *p2;
-}
-#endif
-
-
-#undef strchr
-char *strchr(const char *s, int c)
-{
-	while (*s) {
-		if (*s == c)
-			return (char *) s;
-		s++;
-	}
-	return NULL;
-}
-
-
-#undef strrchr
-char *strrchr(const char *s, int c)
-{
-	const char *p = s;
-	while (*p)
-		p++;
-	p--;
-	while (p >= s) {
-		if (*p == c)
-			return (char *) p;
-		p--;
-	}
-	return NULL;
-}
-
-
-#ifndef _MSC_VER
-#undef strcmp
-int strcmp(const char *s1, const char *s2)
-{
-	while (*s1 == *s2) {
-		if (*s1 == '\0')
-			break;
-		s1++;
-		s2++;
-	}
-
-	return *s1 - *s2;
-}
-#endif
-
-
-#undef strncmp
-int strncmp(const char *s1, const char *s2, size_t n)
-{
-	if (n == 0)
-		return 0;
-
-	while (*s1 == *s2) {
-		if (*s1 == '\0')
-			break;
-		s1++;
-		s2++;
-		n--;
-		if (n == 0)
-			return 0;
-	}
-
-	return *s1 - *s2;
-}
-
-
-#ifndef _MSC_VER
-#undef strlen
-size_t strlen(const char *s)
-{
-	const char *p = s;
-	while (*p)
-		p++;
-	return p - s;
-}
-#endif
-
-
-#undef strncpy
-char *strncpy(char *dest, const char *src, size_t n)
-{
-	char *d = dest;
-
-	while (n--) {
-		*d = *src;
-		if (*src == '\0')
-			break;
-		d++;
-		src++;
-	}
-
-	return dest;
-}
-
-
-#undef strstr
-char *strstr(const char *haystack, const char *needle)
-{
-	size_t len = strlen(needle);
-	while (*haystack) {
-		if (strncmp(haystack, needle, len) == 0)
-			return (char *) haystack;
-		haystack++;
-	}
-
-	return NULL;
-}
-
-
-#undef strdup
-char * strdup(const char *s)
-{
-	char *res;
-	size_t len;
-	if (s == NULL)
-		return NULL;
-	len = strlen(s);
-	res = malloc(len + 1);
-	if (res)
-		memcpy(res, s, len + 1);
-	return res;
-}
-#endif /* !defined(_MSC_VER) || _MSC_VER < 1400 */
-
 
 #ifdef _WIN32_WCE
 void perror(const char *s)
@@ -714,13 +523,13 @@ TCHAR * wpa_strdup_tchar(const char *str)
 {
 #ifdef UNICODE
 	TCHAR *buf;
-	buf = malloc((strlen(str) + 1) * sizeof(TCHAR));
+	buf = os_malloc((strlen(str) + 1) * sizeof(TCHAR));
 	if (buf == NULL)
 		return NULL;
 	wsprintf(buf, L"%S", str);
 	return buf;
 #else /* UNICODE */
-	return strdup(str);
+	return os_strdup(str);
 #endif /* UNICODE */
 }
 #endif /* CONFIG_NATIVE_WINDOWS */
